--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "devDependencies": {
     "@babel/core": "^7.25.9",
     "@babel/preset-env": "^7.25.9",
+    "babel": "^6.23.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^25.0.1"
   },
   "scripts": {
     "test": "jest"
@@ -125,7 +127,6 @@
     "jest-worker": "^29.7.0",
     "js-tokens": "^4.0.0",
     "js-yaml": "^3.14.1",
-    "jsdom": "^25.0.1",
     "jsesc": "^3.0.2",
     "json-parse-even-better-errors": "^2.3.1",
     "json5": "^2.2.3",
